--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   avatar_glow: ^1.2.0
   cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.8.1
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0
 
 dev_dependencies:
   flutter_test:
