--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0
+  firebase_auth: ^0.18.1
 
 dev_dependencies:
   flutter_test:
