--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0
   firebase_auth: ^0.18.1
+  flutter_markdown: ^0.4.4
 
 dev_dependencies:
   flutter_test:
