--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cloud_firestore: ^0.14.0
   firebase_auth: ^0.18.1
   flutter_markdown: ^0.4.4
+  universal_html: ^1.2.3
 
 dev_dependencies:
   flutter_test:
