--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,23 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ammaratef45Flutter",
+        "name": "Android",
+        "request": "launch",
+        "type": "dart",
+        "deviceId": "android"
+    },
+    {
+        "name": "iPhone",
+        "request": "launch",
+        "type": "dart",
+        "deviceId": "iphone"
+    },
+    {
+      "name": "web",
       "request": "launch",
-      "type": "dart"
+      "type": "dart",
+      "deviceId": "chrome"
     }
   ]
 }
