--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/avatar.jpg"
 
 flutter:
-
   uses-material-design: true
   assets:
     - assets/
