--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0
   firebase_auth: ^0.18.1
-  flutter_markdown_editor: ^1.0.0
+  google_sign_in: ^4.5.1
+  firebase_storage: ^5.0.0-dev.3
+  flutter_markdown_editor: ^1.1.1
   url_launcher: ^5.7.2
   fluttertoast: ^7.1.1
   device_info: ^0.4.2+9
-  google_sign_in: ^4.5.1
+  image_picker: ^0.6.7+7
 
 dev_dependencies:
   flutter_test:
