added animated typing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fluttertoast: ^7.1.1
   device_info: ^0.4.2+9
   image_picker: ^0.6.7+7
+  animated_typing: ^0.1.0
 
 dev_dependencies:
   flutter_test:
