--- a/cdk-migration/package.json
+++ b/cdk-migration/package.json
@@ -12,11 +12,11 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
+    "@types/node": "^10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.45.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
-    "aws-cdk": "2.45.0",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
